<resources>
    <string name="app_name">App mockup design</string>
    <string name="roof_screw">หลังคาและสกรู</string>
    <string name="main_manu">หน้าหลัก</string>
    <string name="title_activity_warranty">Warranty</string>
    <string name="Warranty">Warranty</string>
    <string name="tab_text_1">DONGKUK</string>
    <string name="tab_text_2">VICTORY Rollerdoor</string>
    <string name="tab_text_3">Blue Scope</string>
    <string name="detail_item">รายละเอียดสินค้า</string>
    <string name="InvoiceNo">Invoice No.</string>
    <string name="warrantyName">ชื่อ</string>
    <string name="address">ที่อยู่</string>
    <string name="warrantyItem">สินค้า</string>
    <string name="tel">เบอร์</string>
    <string name="mail">E-mail</string>
    <string name="warrantyDetail">รายละเอียด</string>
    <string name="sucessBt">ยืนยัน</string>
    <string name="cancelBt">ยกเลิก</string>
    <string name="warrantyPopup">คุณยืนยันที่จะ "บันทึก" ข้อมูล Warranty ใช่หรือไม่?</string>
    <string name="service_training">บริการออกแบบฟรีจาก V.N.&amp;SKY TRAINING CENTER โดยทีมวิศวกร สถาปนิกและมัณฑนากรผู้ชำนาญ เพียง 4 ขั้นตอนง่ายๆ ในการรับบริการ</string>
    <string name="image1">ถ่ายภาพบ้านหรือห้องที่ต้องการจะปรับปรุงหรือสแกนภาพถ่าย หรือแบบก่อสร้างให้เป็นไฟล์ .dwg .skp .slddrw .jpg</string>
    <string name="image2">ส่งไฟล์ภาพบ้านหรือห้องของคุณผ่านอีเมลล์ sales@vnsteel.co.th ระบุความต้องการของคุณ หรือให้สถาปนิกของเรา  ออกแบบให้โดยไม่เสียค่าใช้จ่าย</string>
    <string name="image3">รอรับไฟล์ที่ทีมวิศวกร สถาปนิกและมัณฑนากรออกแบบเสร็จทางอีเมลล์ หรือรับด้วยตัวเองที่สำนักงานประมาณ 1 สัปดาห์ หลังจากส่งไฟล์ภาพของคุณให้เรา</string>
    <string name="image4">เมื่อได้ผลิตภัณฑ์ที่ชอบ คุณสามารถสั่งซื้อโดยนำ PRODUCT CODE ติดต่อกับตัวแทนจำหน่ายได้ทุกสาขา และเพื่อความถูกต้อง อย่าลืมตรวจสอบสีจริงกับแคตตาล็อกก่อนสั่งซื้อ</string>
    <string name="hotline">บริการตอบคำถามและให้คำแนะนำด้านผลิตภัณฑ์และบริการต่างๆ ของบริษัทฯทางโทรศัพท์ โทร 089-338-2222</string>
    <string name="trainsport">บริการขนส่งสินค้าภายในประเทศ</string>
    <string name="trainsportDetail">* ดูรายละเอียดค่าบริการได้ที่หน้า Transport</string>
    <string name="callcenter">แจ้งปัญหาการใช้งาน ติดต่อที่ฝ่ายลูกค้าสัมพันธ์ โทร 02-159-0761-3 กด 1402 </string>
    <string name="serviewMe">สำนักงานใหญ่ปทุมธานี
156 หมู่5 ตำบลเชียงรากใหญ่ อำเภอสามโคก จังหวัดปทุมธานี\n
วันและเวลาทำการ จ.-ส. / 08.00 น.-17.00 น. (กรุณาโทรนัด
กับวิศวกร สถาปนิกและมัณฑนากรล่วงหน้า) ตัวแทนจำหน่ายที่
ให้บริการ (กรุณาตรวจสอบสาขา ตัวแทนจำหน่ายที่ให้บริการ
โทร 02-159-0761-3 กด 1402 ) </string>
    <string name="title_activity_transport">Transport</string>
    <string name="carType1">รถกระบะ 4 ล้อ</string>
    <string name="carType2">รถ 6 ล้อ</string>
    <string name="carType3">รถเทรลเลอร์</string>
    <string name="Transport">Transport</string>
    <string name="title_activity_transport_adapter">transportAdapter</string>
    <string name="companyName">บริษัท วี เอ็น สตีล อินเตอร์เทรด จำกัด</string>
    <string name="companyNameDetail1">\u0009\u0009ผู้ผลิตและจัดหน่ายเหล็กโครงสร้างรูปพรรณ
อาทิเช่น ท่อเหล็ก และเหล็กรูปตัวซี โดยมุ่งเน้นเครื่องจักรที่มีคุณภาพ และการให้ บริการเพื่อสร้างความพึงพอใจของลูกค้าและคุณภาพของสินค้า รวมไปถึงบริษัทฯให้บริการจัดหาผลิตภัณฑ์เหล็กในลักษณะศูนย์บริการเหล็ก ทั้งเหล็กแผ่นรีดร้อนชนิดม้วนและเหล็กแผ่นรีดเย็นชนิดม้วน จำหน่ายให้แก่ ผู้ค้าส่งเหล็กและลูกค้าที่เป็นโรงงานเหล็กต่าง
        \n\n\u0009\u0009 ปัจจุบัน บริษัท วี.เอ็น.สตีล อินเตอร์เทรด จำกัด ได้เพิ่มการผลิตประตูม้วนระบบใหม่ในชื่อ VICTORY หรือ (Roller Door) เพื่อเป็นทางเลือก ใหม่ให้ผู้บริโภค ทั้งนี้ประตูม้วนระบบใหม่ VICTORY เป็นประตูม้วนที่ได้รับความนิยมสูงสุดในต่างประเทศ สามารถใช้ได้ทั้ง ระบบไฟฟ้า และระบบมือดึง (Manual) ด้วยคุณภาพที่ดีกว่าประตูม้วนระบบเก่าจึงทำให้เปิดปิดได้รวดเร็วกว่า แข็งแรงกว่า และเสียงเบากว่า เรามั่นใจว่าประตูม้วนระบบใหม่ VICTORY จะสามารถทดแทนข้อบกพร่องในประตูม้วนระบบเก่าได้เป็น อย่างดี นอกจากนี้การบริหารและกลยุทธิ์การตลาดที่รวดเร็ว และมีประสิทธิภาพของทางห้างฯ ได้นำมาซึ่งความ ไว้วางใจจากลูกค้า และทำให้ บริษัท วี.เอ็น.สตีล อินเตอร์เทรด จำกัด  มุ่งมั่นที่จะพัฒนาขึ้นเพื่อเป็นผู้นำในด้านธุรกิจเหล็ก</string>
    <string name="DONGKUK_STEEL">DONGKUK STEEL</string>
    <string name="ROOF_SCREW">ROOF &amp; SCREW</string>
    <string name="dongtitle">เหล็กแผ่นเคลือบอลูมิเนียมและซิงค์</string>
    <string name="dongdetail">เหล็กแผ่นเคลือบอลูมิเนียม และซิงค์ เกิดจากขั้นตอนการเคลือบพื้นผิวเหล็กด้วยอลูมิเนียมที่ช่วยป้องกันการกัดกร่อนและกันความร้อน และซิงค์ที่มีคุณสมบัติป้องกันการกัดกร่อน</string>
    <string name="dongcustom">กำหนดรูปแบบสินค้าที่ต้องการ</string>
    <string name="victory_screw">VICTORY SCREW</string>
    <string name="galvanized">เหล็กกัลวาไนซ์</string>
    <string name="title_activity_call_me">Map</string>
</resources>
